fixed web page shifting due to scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 html {
   font-size: 62.5%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 body {
